--- a/src/components/Card/Button/Button.module.css
+++ b/src/components/Card/Button/Button.module.css
@@ -4,10 +4,10 @@
   place-content: space-around;
   padding: 16px 0;
   border-radius: 8px;
-  background-color: #000;
+  background-color: #fff;
 }
 .clickMe {
-  color: #fff;
+  color: #000;
   font-size: 20px;
   font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
     'Liberation Sans', sans-serif;
