--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -8,15 +8,15 @@
   align-items: flex-start;
   gap: 33px;
   padding: 24px;
-  border-radius: 8px;
-  background-color: #fff;
+  border-radius: 18px;
+  background-color: #151515;
   box-shadow: 0px 0px 0px 0px #0000001a, 0px 11px 24px 0px #0000001a, 0px 44px 44px 0px #00000017,
     0px 99px 59px 0px #0000000d, 0px 176px 70px 0px #00000003, 0px 275px 77px 0px #0000;
 }
 .heading {
-  color: #000;
+  color: #fff;
   font-size: 25px;
-  font-weight: bold;
+  font-weight: Regular;
   font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
     'Liberation Sans', sans-serif;
   letter-spacing: -0.03em;
