--- a/src/resets.css
+++ b/src/resets.css
@@ -4,6 +4,7 @@ body,
   margin: 0;
   padding: 0;
   min-height: 100%;
+  background-color: #5E5E5E;
   display: flex;
   flex-basis: 100%;
   width: 100%;
